# bwrs

./: Cargo.toml  README.md
src/: api.rs  crypto.rs  main.rs
src/commands/: completion.rs  encode.rs  login.rs  mod.rs
