[package]
name = "bwrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dialoguer = "0.11.0"
eyre = "0.6.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_repr = "0.1.19"
ureq = { version = "2.10.1", features = ["json"] }
