[package]
name = "bwrs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dialoguer = "0.11.0"
eyre = "0.6.12"
hkdf = "0.12.4"
pbkdf2 = "0.12.2"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zeroize = "1.8.1"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
